# Gemini_Generative_Story_Testing

./: LICENSE  README.md  main.py  pyproject.toml
service/: README.md  pyproject.toml
service/src/service/: __init__.py  generator.py
src/: generator.py  prompts.py  wordBank.py
