[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rutvik G", email = "sgorrela3@gatech.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "google>=3.0.0",
    "google-genai>=1.41.0",
    "pydantic>=2.12.0",
]

[project.scripts]
service = "service:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
